src/converters/poetry/snapshots/migrate_to_uv__converters__poetry__tests__perform_migration_minimal_pyproject.snap
---
source: src/migrators/poetry/mod.rs
expression: "perform_migration(Path::new(\"tests/fixtures/poetry/minimal/pyproject.toml\"),\nfalse, DependencyGroupsStrategy::IncludeInDev,)"
snapshot_kind: text
---
'''
[project]
name = "foobar"
version = "0.0.1"

[tool.ruff]
fix = true

[tool.uv]

[tool.ruff.format]
preview = true
'''
