src/converters/poetry/snapshots/migrate_to_uv__converters__poetry__tests__perform_migration_multiple_readmes.snap
---
source: src/migrators/poetry/mod.rs
expression: "perform_migration(Path::new(\"tests/fixtures/poetry/multiple_readmes/pyproject.toml\"),\nfalse, DependencyGroupsStrategy::SetDefaultGroups,)"
snapshot_kind: text
---
'''
[project]
name = ""
version = "0.0.1"
readme = "README1.md"

[tool.uv]
'''
