src/converters/poetry/snapshots/migrate_to_uv__converters__poetry__tests__perform_migration_with_lock_file.snap
---
source: src/converters/poetry/mod.rs
expression: "poetry.perform_migration(false, false,\nDependencyGroupsStrategy::SetDefaultGroups,)"
---
'''
[project]
name = "foo"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = ["arrow>=1.2.3,<2"]

[dependency-groups]
dev = ["factory-boy>=3.2.1,<4"]
typing = ["mypy>=1.13.0,<2"]

[tool.uv]
package = false
default-groups = [
    "dev",
    "typing",
]
constraint-dependencies = [
    "arrow==1.2.3",
    "factory-boy==3.2.1",
    "faker==33.1.0",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "python-dateutil==2.7.0",
    "six==1.15.0",
    "typing-extensions==4.6.0",
]
'''
